<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.BalanceFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_ventasgastos"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitleTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Utilidad_total"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvTotal"
                />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/utilidad_numeros"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTotal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/view"/>

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/color_divider"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvTitleVentas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ventas_totales"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvVentas"/>

            <ImageView
                android:id="@+id/imgVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_money_green"
                app:layout_constraintStart_toEndOf="@id/view"
                app:layout_constraintTop_toTopOf="@id/tvTitleVentas"
                app:layout_constraintEnd_toStartOf="@id/tvVentas"
                app:layout_constraintBottom_toBottomOf="@id/tvVentas"/>

            <TextView
                android:id="@+id/tvVentas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/verdecito"
                android:text="@string/ventas_totales_cordobas"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@id/tvTitleVentas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvTitleGastos"/>

            <TextView
                android:id="@+id/tvTitleGastos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gastos_totales"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/tvVentas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvGastos"/>

            <ImageView
                android:id="@+id/imgRojo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_money_red"
                app:layout_constraintStart_toEndOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/tvTitleGastos"
                app:layout_constraintEnd_toStartOf="@id/tvGastos"
                app:layout_constraintBottom_toBottomOf="@id/tvGastos"/>

            <TextView
                android:id="@+id/tvGastos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/red"
                android:text="@string/gastos_totales_cordobas"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@id/tvTitleGastos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_ventasgastos"
        app:layout_constraintBottom_toTopOf="@id/btnNuevaVenta">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVentas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/ventas_item"
            android:clipToPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rvGastos"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGastos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/gastos_item"
            android:clipToPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvVentas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNuevaVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:text="@string/nueva_venta"
        android:backgroundTint="@color/verdecito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNuevoGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:text="@string/nuevo_gasto"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>